--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ display: block
     border: 1px solid black;
     }
 .red {
-            background-color: red;
+            background-color: black;
     }
 .yellow {
         background-color: yellow;
