--- a/style.css
+++ b/style.css
@@ -29,10 +29,6 @@
     display: inline-block
     height: 100px;
     border: 1px solid red;
-    margin:: 10px
-    }
-#l1  {
-    display: inline-block;
     }
 
 .pixel {
@@ -42,4 +38,8 @@
     width: 40px;
     border: 1px solid black;
 }
-
+#clear-board {
+font-size: 40px;
+border: 1px solid black;
+padding: 10px;
+}
