--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-#color-palette {
-    display: block
-}
-
 .color {
     display: inline-block;
     width: 100px;
@@ -26,11 +22,12 @@
 }
 
 #pixel-board {
-    display: inline-block
-    height: 100px;
-    border: 1px solid red;
+    width: 230px;
+    border: 1px solid red;  
     }
-
+    #pixel-board > pixel:hover {
+        margin: 20px solid  black   ;
+    }
 .pixel {
     background-color: rgb(255, 255, 255);
     display:inline-block;
@@ -41,5 +38,14 @@
 #clear-board {
 font-size: 40px;
 border: 1px solid black;
+border-radius: 50px;
 padding: 10px;
+margin: 10px;
+box-shadow: 1px 1px 1px 1px black;
+}
+
+#selected:enabled {
+    background-color: black;
+}
+#h1 {
 }
